--- a/.config/neofetch/config.conf
+++ b/.config/neofetch/config.conf
@@ -8,7 +8,7 @@ print_info() {
     info "${cl1} ​ ​  " resolution
     prin "    ├─────────\n Software Information \n─────────┤"
     # info " ​ ​  " users
-    info "${cl7} ​ ​  " distro
+    info "${cl7} ​ ​  " distro
     info "${cl5} ​ ​  " kernel
     info "${cl2} ​ ​  " de
     info "${cl6} ​ ​  " wm
