--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule ".suckless/dmenu"]
 	path = .suckless/dmenu
 	url = git@github.com:jx11r/dmenu.git
+[submodule ".suckless/st"]
+	path = .suckless/st
+	url = git@github.com:jx11r/st.git
