--- a/.config/qtile/.gitignore
+++ b/.config/qtile/.gitignore
@@ -1,4 +1,7 @@
-# Ignore:
-modules/__pycache__
 __pycache__
-dev
+_dev
+
+modules/__pycache__
+modules/core/__pycache__
+modules/extras/__pycache__
+modules/utils/__pycache__
